# lite-jailhouse

./: LICENSE  README.md
jailhouse-configs/: zephyr-kv260-demo.c  zephyr-zcu102-demo.c  zynqmp-kv260.c
zephyr_app/: CMakeLists.txt  arch_printk_char_out.c  main.c  prj.conf
zephyr_app/boards/: qemu_cortex_a53.overlay  qemu_cortex_a53_smp.overlay
zephyr_app/boards/arm64/zynqmp_zcu102/: Kconfig.board  Kconfig.defconfig  zynqmp_zcu102.dts  zynqmp_zcu102.yaml  zynqmp_zcu102_defconfig
zephyr_app/soc/arm64/zynqmp_zcu102/: Kconfig.defconfig  Kconfig.soc  linker.ld  mmu_regions.c  soc.h
